# AI-movie-recommendation-system

./: CNAME  app.py  collaborative_filtering.py  content_based_filtering.py  data_loader.py  evaluation.py  hybrid_recommender.py  pyproject.toml  utils.py
