[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.3.0",
    "scikit-surprise>=1.1.3",
    "scipy>=1.11.0",
    "streamlit>=1.28.0",
    "xlsxwriter>=3.2.9",
]
